# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: README.md  brain_engine.py  brain_prog.py  brain_test.py  calc.py  cli.py  gcd.py  prime.py  progression.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain-prime.py  brain_calc.py  brain_even.py  brain_game.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py  logic.py  main.py  prime_logic.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  brain_test.py  calc_logic.py  engine_progression.py  logic_calc.py  logic_even.py  logic_prime.py  progression_logic.py
