[tool.poetry]
packages = [
  { include = "brain_games" },
]


name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Даниил Филимошин <filimoshin03@inbox.ru>"]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.games.brain_calc:expression"
brain-gcd = "brain_games.scripts.games.brain_gcd:gcd"
brain-progression = "brain_games.scripts.games.brain_progression:progression"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
